--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="background_secondary">#eeeeee</color>
     <color name="mega">#db0605</color>
     <color name="text_login">#333333</color>
-    <color name="used_space_OK">#1ea4e3</color>
+    <color name="used_space_ok">#1ea4e3</color>
+    <color name="used_space_warning">#ffb800</color>
+    <color name="used_space_exceed">#d52400</color>
     <color name="navigation_drawer_mail">#858585</color>
     <color name="navigation_drawer_text">#d2d2d2</color>
     <color name="navigation_drawer_background">#333333</color>
