--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -96,4 +96,11 @@
         <!-- <item name="windowActionBarOverlay">true</item> -->
         <item name="android:windowNoTitle">true</item>
     </style>
+    
+    <style name="MEGAProgressBar" parent="android:Widget.ProgressBar.Horizontal">
+		 <item name="android:indeterminateOnly">false</item>
+          <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_ok</item>
+          <item name="android:minHeight">10dip</item>
+          <item name="android:maxHeight">20dip</item>
+	</style>
 </resources>
