--- a/res/drawable/btn_default_holo_light.xml
+++ b/res/drawable/btn_default_holo_light.xml
@@ -2,7 +2,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_window_focused="false" android:state_enabled="true"
-        android:drawable="@drawable/btn_default_normal_holo_light">
+        android:drawable="@drawable/btn_normal">
 	</item>
     <item android:state_window_focused="false" android:state_enabled="false"
         android:drawable="@drawable/btn_default_disabled_holo_light">
@@ -23,7 +23,7 @@
 		</shape>
     </item>
     <item android:state_enabled="true"
-        android:drawable="@drawable/btn_default_normal_holo_light">
+        android:drawable="@drawable/btn_normal">
     </item>
     <item android:state_focused="true"
         android:drawable="@drawable/btn_default_disabled_focused_holo_light">
