--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -63,6 +63,7 @@
 		                android:src="@drawable/three_dots_background_white" 
 		                android:layout_gravity="center_vertical|center_horizontal" 
 		                android:paddingRight="5dp"
+		                android:paddingTop="20dp"
 		                android:layout_marginBottom="4dp"/>
 		            
 		            <!-- <TextView 
