--- a/res/layout/activity_tour.xml
+++ b/res/layout/activity_tour.xml
@@ -20,7 +20,7 @@
             android:paddingTop="0dp" 
             android:background="@color/background" >
 	       
-	       <android.support.v4.view.ViewPager
+	       <com.mega.components.LoopViewPager
 	           android:id="@+id/pager"
 	           android:layout_width="fill_parent"
 	           android:layout_height="wrap_content"
