--- a/res/layout/item_transfers_list.xml
+++ b/res/layout/item_transfers_list.xml
@@ -59,7 +59,7 @@
         android:paddingBottom="7dp"
         android:textColor="@color/file_list_second_row" />
     
-    <ImageView
+<!--     <ImageView
         android:id="@+id/transfers_list_bar_structure"
         android:layout_width="250dp"
         android:layout_height="25dp"
@@ -78,6 +78,16 @@
         android:layout_toRightOf="@id/transfers_list_thumbnail" 
         android:paddingLeft="7dp"
         android:paddingBottom="7dp" />
+ -->
+     
+    <ProgressBar
+	    android:id="@+id/transfers_list_bar"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content" 
+		style="@style/MEGAProgressBarTransfers"  
+		android:layout_margin="5dip" 
+		android:layout_below="@id/transfers_list_filename"
+        android:layout_toRightOf="@id/transfers_list_thumbnail" />
     
     <ImageButton 
         android:id="@+id/transfers_list_three_dots"
