--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -101,4 +101,11 @@
           <item name="android:minHeight">10dip</item>
           <item name="android:maxHeight">20dip</item>
 	</style>
+	
+    <style name="MEGAProgressBarTransfers" parent="android:Widget.ProgressBar.Horizontal">
+		 <item name="android:indeterminateOnly">false</item>
+          <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal_transfer</item>
+          <item name="android:minHeight">10dip</item>
+          <item name="android:maxHeight">20dip</item>
+	</style>
 </resources>
