--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -80,7 +80,7 @@
 				        mySwitch:textOn=""
 				        mySwitch:textOnThumb="false"
 				        mySwitch:thumb="@drawable/switch_thumb"
-				        mySwitch:track="@drawable/switch_track" />
+				        mySwitch:track="@drawable/switch_track_online" />
 		            
 		            <TextView 
 	       			 	android:id="@+id/ABC"
