--- a/res/menu/activity_manager.xml
+++ b/res/menu/activity_manager.xml
@@ -5,7 +5,7 @@
 		android:id="@+id/action_search"
 		android:orderInCategory="100"
 		android:title="@string/action_search"
-		android:icon="@drawable/ic_menu_action_search"
+		android:icon="@drawable/ic_menu_search"
 		MEGA:actionViewClass="android.support.v7.widget.SearchView"
 		MEGA:showAsAction="ifRoom|collapseActionView" /> 
 
@@ -13,7 +13,7 @@
 <!--     <item 
         android:id="@+id/action_search"
         MEGA:actionViewClass="android.support.v7.widget.SearchView"
-        android:icon="@drawable/ic_menu_action_search"                
+        android:icon="@drawable/ic_menu_search"                
         android:orderInCategory="100"
         MEGA:showAsAction="ifRoom|collapseActionView"
         android:title="@string/action_search" />
@@ -23,33 +23,63 @@
 	    android:id="@+id/action_new_folder"
 	    android:orderInCategory="100"
 	    android:showAsAction="always"
-	    android:title="Create new folder"
+	    android:title="@string/action_create_folder"
 	    android:icon="@drawable/ic_menu_new_folder_dark"
 	    MEGA:showAsAction="ifRoom" />
 	
 	<item
-	    android:id="@+id/action_more_options"
+	    android:id="@+id/action_add"
 	    android:orderInCategory="105"
 	    android:showAsAction="always"
-	    android:title="More options"
-	    android:icon="@drawable/ic_action_content_new"
+	    android:title="@string/action_add"
+	    android:icon="@drawable/ic_menu_add"
 	    MEGA:showAsAction="ifRoom" />
 	
 	<item
-	    android:id="@+id/action_upload"
+	    android:id="@+id/action_rubbish_bin"
 	    android:orderInCategory="110"
 	    android:showAsAction="always"
-	    android:title="More options"
+	    android:title="@string/section_rubbish_bin"
 	    android:icon="@drawable/ic_menu_upload_here_dark"
 	    MEGA:showAsAction="ifRoom" />
+	
+	<item
+	    android:id="@+id/action_menu_refresh"
+	    android:orderInCategory="115"
+	    android:showAsAction="never"
+	    android:title="@string/action_refresh"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
+	<item
+	    android:id="@+id/action_menu_sort_by"
+	    android:orderInCategory="120"
+	    android:showAsAction="never"
+	    android:title="@string/action_sort_by"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
+	<item
+	    android:id="@+id/action_menu_help"
+	    android:orderInCategory="125"
+	    android:showAsAction="never"
+	    android:title="@string/action_help"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
     
-<!--     <item
-        android:id="@+id/action_logout"
-        android:orderInCategory="115"
-        android:showAsAction="always"
-        android:title="@string/action_logout"
-        android:icon="@drawable/ic_launcher"
-        MEGA:showAsAction="ifRoom"
-        />
-         -->
+	<item
+	    android:id="@+id/action_menu_upgrade_account"
+	    android:orderInCategory="130"
+	    android:showAsAction="never"
+	    android:title="@string/action_upgrade_account"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
+	
+	<item
+	    android:id="@+id/action_menu_logout"
+	    android:orderInCategory="135"
+	    android:showAsAction="never"
+	    android:title="@string/action_logout"
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
 </menu>
