[AA-23] Options when previewing an image Simulated action bar and options added. Download Get link Copy Move Rename Remove Send link Social Media sharing

--- a/res/menu/activity_file_properties.xml
+++ b/res/menu/activity_file_properties.xml
@@ -5,7 +5,7 @@
 	    android:id="@+id/action_file_properties_download"
 	    android:orderInCategory="100"
 	    android:showAsAction="always"
-	    android:title="Download"
+	    android:title="@string/context_download"
 	    android:icon="@drawable/ic_menu_download_dark"
 	    MEGA:showAsAction="ifRoom" />
 	
@@ -13,41 +13,41 @@
 	    android:id="@+id/action_file_properties_get_link"
 	    android:orderInCategory="105"
 	    android:showAsAction="always"
-	    android:title="Get link"
+	    android:title="@string/context_get_link_menu"
 	    MEGA:showAsAction="never" />
 	
 	<item
 	    android:id="@+id/action_file_properties_rename"
 	    android:orderInCategory="110"
 	    android:showAsAction="always"
-	    android:title="Rename"
+	    android:title="@string/context_rename"
 	    MEGA:showAsAction="never" />
 	
 	<item
 	    android:id="@+id/action_file_properties_move"
 	    android:orderInCategory="115"
 	    android:showAsAction="always"
-	    android:title="Move"
+	    android:title="@string/context_move"
 	    MEGA:showAsAction="never" />
 	
 	<item
 	    android:id="@+id/action_file_properties_copy"
 	    android:orderInCategory="120"
 	    android:showAsAction="always"
-	    android:title="Copy"
+	    android:title="@string/context_copy"
 	    MEGA:showAsAction="never" />
 	
  	<item
 	    android:id="@+id/action_file_properties_send_link"
 	    android:orderInCategory="125"
 	    android:showAsAction="always"
-	    android:title="Send link"
+	    android:title="@string/context_send_link"
 	    MEGA:showAsAction="never" />
 	
 	<item
 	    android:id="@+id/action_file_properties_remove"
 	    android:orderInCategory="130"
 	    android:showAsAction="always"
-	    android:title="Remove"
+	    android:title="@string/context_remove"
 	    MEGA:showAsAction="never" />
 </menu>
