--- a/res/layout/activity_full_screen_image_viewer.xml
+++ b/res/layout/activity_full_screen_image_viewer.xml
@@ -15,8 +15,17 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:id="@+id/image_viewer_layout_bottom"
-        android:background="#00000000"
+        android:background="#44000000"
         android:layout_alignParentBottom="true">
+        
+        <TextView 
+            android:id="@+id/full_image_viewer_file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white" 
+            android:textStyle="bold"/>
            
     </RelativeLayout>
     
@@ -24,7 +33,7 @@
         android:layout_width="fill_parent"
         android:layout_height="48dp"
         android:id="@+id/image_viewer_layout_top"
-        android:background="#00000000"
+        android:background="#44000000"
         android:layout_alignParentTop="true">
         
         <ImageView 
@@ -56,8 +65,37 @@
             android:layout_toLeftOf="@id/full_image_viewer_overflow"
             android:layout_marginRight="5dp"
             style="@style/dialogActionButton"/>
-    
+        
+        <ImageView
+		    android:id="@+id/full_image_viewer_download"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:src="@drawable/ic_menu_download"
+		    android:layout_centerVertical="true"
+		    android:layout_toLeftOf="@id/full_image_viewer_share"
+		    android:layout_marginRight="5dp"
+		    style="@style/dialogActionButton" />
+        
     </RelativeLayout>
+    
+    <RelativeLayout  
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:id="@+id/image_viewer_layout_overflow_menu"
+			android:background="#ffffffff"
+	        android:layout_alignParentRight="true"
+	        android:layout_below="@+id/image_viewer_layout_top"
+	        android:layout_marginRight="5dp">
+        
+        <ListView
+            android:id="@+id/image_viewer_overflow_menu_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+			android:layout_marginLeft="0dp"
+			android:background="#00000000"
+			/>            
+	</RelativeLayout>
     
 <!-- <TextView
         android:id="@+id/full_screen_image_viewer_title"
