--- a/res/layout/fragment_transfers.xml
+++ b/res/layout/fragment_transfers.xml
@@ -9,5 +9,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
+    
+    <ImageView
+	    android:id="@+id/transfers_empty_image"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerInParent="true" />
+    
+    <TextView
+	    android:id="@+id/transfers_empty_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_secondary"
+	    android:textSize="16sp"
+	    android:layout_below="@id/transfers_empty_image"
+	    android:layout_marginTop="@dimen/standard_margin"
+	    android:layout_centerHorizontal="true"/>
+    
+    <ImageView
+	    android:id="@+id/transfers_pause_image"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_centerInParent="true" />
+    
+    <TextView
+	    android:id="@+id/transfers_pause_text"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:textColor="@color/text_secondary"
+	    android:textSize="16sp"
+	    android:layout_below="@id/transfers_pause_image"
+	    android:layout_marginTop="@dimen/standard_margin"
+	    android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
